# GMSH_Mesher

./: CMakeLists.txt  Hex_dom_gmsh_mesh.cpp  Hex_dom_gmsh_mesh.h  README.md  main.cpp
DataInput/: Tronco_cono_3D.stl  bolt.stl  cube100x100axisAligned.stl  cube100x100rotated.stl  cubeTest.off  ellipse.stl  parallelepiped.stl  rotatedTrapezoid.stl  sphere.stl  toro.stl  twoCubes.stl
MeshOutput/: bolt_gmsh.vtk  bunny_gmsh.vtk  cube100x100axisAligned_gmsh.vtk  cube100x100rotated_gmsh.vtk  sfera_gmsh.vtk
